---
title: FinanceHub
---
classDiagram
class Accounts {
    +uuid id
    +string name
    +int bankCode
    +int agency
    +int accountNumber
    +string pix
    +string loginUser
    AccountType accountType
    +string useDescription
    +bool active

    +create(account) uuid
    +update(account) account
    +getAll() List~account~
    +getAccount() account
}
class AccountType {
    <<enumeration>>
    +NOT_DEFINED
    +CHECKING_ACCOUNT
    +INVESTMENT
}
Accounts --> AccountType : reads


class Objectives {
    +uuid id
    +ObjectiveHorizon objectiveHorizon
    +Date estimatedDate
    +Date createdDate
    +Date updatedDate
    +string description
    +ObjectiveStatus status

    +create(objective) uuid
    +update(objective) objective
    +getAll() List~objective~
}
class ObjectiveHorizon {
    <<enumeration>>
    +SHORT_TERM
    +MEDIUM_TERM
    +LONG_TERM
}
class ObjectiveStatus {
    <<enumeration>>
    +ACTIVE
    +COMPLETED
    +CANCELLED
}
Objectives --> ObjectiveHorizon : reads
Objectives --> ObjectiveStatus : reads


class Asset {
    +uuid id
    +string name
    +AssetType type
    +string ticker
    +string country

    +create(asset) uuid
}
class AssetType {
    <<enumeration>>
    +STOCK
    +REIT
    +ETF
    +BOND
}
class AssetEarnings {
    +uuid id
    +uuid assetId
    +BigDecimal totalAmountReceived
    +YearMonth referenceMonth
    +string notes

    +createOrUpdateEarningEntry(earningEntry) uuid
}
AssetEarnings --> Asset : reads


class IncomeEntry {
    +uuid id
    +YearMonth referenceMonth
    +BigDecimal grossAmount
    +BigDecimal discountAmount
    +BigDecimal netAmount
    +string description

    createOrUpdateIncome(entry) uuid
}
class ExpenseEntry {
    +uuid id
    +YearMonth referenceMonth
    +string category
    +BigDecimal amount
    +string description
    +bool isFixed

    createOrUpdateExpense(entry) uuid
}
class Balances {
    +uuid id
    +YearMonth referenceMonth
    +BigDecimal totalGrossIncomes
    +BigDecimal totalNetIncomes
    +BigDecimal totalFixExpenses
    +BigDecimal totalOtherExpenses
    +uuid incomeUuid
    +uuid expenseUuid

    createOrUpdateBalance(balance) uuid
    getBalances() List~balance~
    getLastBalance() balance
    getAnualBalance(referenceYear) balance
}
class InvestmentStrategies {
    +uuid id
    +int investableIncomePercent
    +int fixedIncomePercent
    +int reitsPercent
    +int stocksPercent
    +int cryptoPercent
    +int internationalPercent
    +string description
    +Date createdDate
    +Date updatedDate
    +bool active

    +create(strategy) uuid
    +update(strategy) strategy
    +getActive() strategy
}
class InvestmentsEntry {
    +uuid id
    +YearMonth referenceMonth
    +string name
    +BigDecimal amount
    +InvestmentType type
    +string description

    createOrUpdateinvestment(investment) uuid
}
class InvestmentType {
    <<enumeration>>
    +FIXED_INCOME,
    +VARIABLE_INCOME,
    +EMERGENCY_FUND
}
class InvestmentsSnapshot {
    +uuid id
    +YearMonth referenceMonth
    +BigDecimal totalInvested
    +BigDecimal fixedEmergencyFundValue
    +BigDecimal fixedIncomeValue
    +BigDecimal variableIncomeValue
    +string notes

    getInvestmentSnapshot() List~investmentSnapshot~
    getLastInvestmentSnapshot() investmentSnapshot
}
IncomeEntry --> Balances : creates
IncomeEntry <-- Balances : reads
ExpenseEntry --> Balances : creates
ExpenseEntry <-- Balances : reads
Balances --> InvestmentStrategies : reads
Balances --> InvestmentsSnapshot : reads
Balances <-- InvestmentsSnapshot : creates
InvestmentsEntry --> InvestmentType : reads
InvestmentsEntry --> InvestmentsSnapshot : creates


